# SantaGymBot

./: .env.dev.example  .env.example  .env.local.example  .env.server.example  .gitignore  CLAUDE.md  Makefile  README.md  backup 17.04.2026.gymtracker  docker-compose.local.yml  docker-compose.server.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy-dev.yml  deploy.yml
backend/: .dockerignore  Dockerfile  Dockerfile.local  pyproject.toml
backend/app/: main_api.py  main_bot.py
backend/app/application/services/: auth_service.py  backup_import_service.py  exercise_service.py  gymtracker_backup.py  workout_service.py  workout_stats.py
backend/app/core/: config.py
backend/app/domain/schemas/: auth.py  exercise.py  workout.py
backend/app/infrastructure/database/: database.py  models.py
backend/app/infrastructure/database/migrations/: env.py
backend/app/infrastructure/database/migrations/versions/: 0a6ff7377d2a_init.py  15e9ed40f35e_exercise_catalog_visibility_fuzzy.py
backend/app/infrastructure/database/repositories/: base.py  user.py  workout.py
backend/app/presentation/api_v1/routers/: auth.py  exercises.py  workouts.py
backend/app/scripts/: import_gymtracker_backup.py
backend/ops/one_off/: gymtracker_import_lib.py  import_gymtracker_backup.py
backend/tests/: test_gymtracker_backup.py  test_workout_stats.py
docs/ops/: gymtracker-one-off-import.md  local-stand.md  server-stand.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  (+2 more)
(+40 files in other folders)
